feat: Add support/donate section to README and subtle PayPal link in dashboard sidebar

--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -47,6 +47,10 @@
                 <span class="status-dot offline"></span>
                 <span>Nicht verbunden</span>
             </div>
+            <a href="https://www.paypal.me/RiDDiX93" target="_blank" rel="noopener" class="donate-link">
+                <i class="fas fa-heart"></i>
+                <span>Support</span>
+            </a>
         </div>
     </nav>
 
